<resources>
    <string name="app_name">ProjectTimesheet</string>


    <!-- Login page -->
    <string name="logo_text">Project Timesheet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot Your Password?</string>


</resources>
